--- a/main.scss
+++ b/main.scss
@@ -1,3 +1,6 @@
+@import '~bootstrap/scss/bootstrap';
+@import '~@fortawesome/fontawesome-free/scss/fontawesome';
+
 #content {
   padding-top: 80px;
 }
