Fix nested dropdown menus

--- a/main.scss
+++ b/main.scss
@@ -92,3 +92,12 @@ ul.nav li.main {
     width: 263px;
   }
 }
+
+.dropdown-submenu {
+  position: relative;
+}
+
+.dropdown-submenu > .dropdown-menu {
+  top: 0;
+  left: 100%;
+}
