--- a/main.scss
+++ b/main.scss
@@ -1,5 +1,6 @@
 @import '~bootstrap/scss/bootstrap';
 @import '~@fortawesome/fontawesome-free/scss/fontawesome';
+@import '~highlight.js/scss/github';
 
 #content {
   padding-top: 80px;
